--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:10}
 # Redis Configuration (from .env or environment variables)
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6379}
+
+# Spring Session Configuration
+spring.session.redis.flush-mode=on_save
+spring.session.store-type=redis
+# Ignore invalid session data (from previous app versions)
+spring.session.redis.namespace=spring:session
