--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -16,8 +16,7 @@ spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:10}
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6379}
 
-# Spring Session Configuration
 spring.session.redis.flush-mode=on_save
 spring.session.store-type=redis
-# Ignore invalid session data (from previous app versions)
+
 spring.session.redis.namespace=spring:session
