--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.session.redis.flush-mode=on_save
 spring.session.store-type=redis
 
 spring.session.redis.namespace=spring:session
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+debug=true
