--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=student-management-system
 
 # Database Configuration (from .env or environment variables)
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/postgres}
-spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/sms?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.driver-class-name=${DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Hikari Connection Pool
 spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:10}
@@ -15,8 +17,26 @@ spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:10}
 # Redis Configuration (from .env or environment variables)
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:15547}
+spring.data.redis.timeout=60000
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
 
-spring.session.redis.flush-mode=on_save
+# Spring Session Configuration
 spring.session.store-type=redis
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=sms:session
+spring.session.timeout=1800
 
-spring.session.redis.namespace=spring:session
+# JWT Configuration
+jwt.secret=${JWT_SECRET:GICSTUDENTMANAGEMENTSYSTEMSECRETKEY@1234567890}
+jwt.expiration=86400000
+
+# Spring Boot DevTools Configuration (Hot Reload)
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+spring.web.resources.cache.period=0
+
+#debug=true
