--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=student-management-system
 
 # Database Configuration (from .env or environment variables)
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/StudentManagement}
+spring.datasource.username=postgres
+spring.datasource.password=254000
+#change 
 spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
