fix user detail design and add search with (name and email)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=student-management-system
 
 # Database Configuration (from .env or environment variables)
-spring.datasource.url=jdbc:postgresql://localhost:5432/sms
-spring.datasource.username=postgres
-spring.datasource.password=thetpaingoo123
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/sms}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -39,6 +39,3 @@ spring.thymeleaf.cache=false
 spring.web.resources.cache.period=0
 
 #debug=true
-
-# Session Configuration
-server.servlet.session.timeout=30m
