--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hikari Connection Pool
-spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:10}
+spring.datasource.hikari.maximum-pool-size=6
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=30000
 
 # Redis Configuration (from .env or environment variables)
 spring.data.redis.host=${REDIS_HOST:localhost}
