--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=student-management-system
 
 # Database Configuration (from .env or environment variables)
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/sms}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:root}
-spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
+# spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/sms}
+# spring.datasource.username=${DB_USERNAME:postgres}
+# spring.datasource.password=${DB_PASSWORD:root}
+ 
+spring.datasource.url=jdbc:postgresql://aws-1-ap-south-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.ylwtjznomlnovobowcwl
+spring.datasource.password=Apple1234@
+spring.datasource.driver-class-name=org.postgresql.Driver
+ 
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -12,8 +17,8 @@ spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hikari Connection Pool
-spring.datasource.hikari.maximum-pool-size=6
-spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=0
 spring.datasource.hikari.connection-timeout=30000
 
 # Redis Configuration (from .env or environment variables)
